中国道详细tab页

--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -199,7 +199,119 @@ margin-top: -3px;">
         </div>
 
         <div id="tabs1-two">
-            jfiewojfowei
+            <div class="story-banner">
+                <img src="zhongguodao/images/banner_02.jpg" style="width: 100%;">
+                <div class="s-content">
+                    <div class="s-wenzhang">
+                        <p style="margin-top:50px;">
+                            对许多人来说，喝酒曾经是一桩很暖心窝的事：一碟花生米，几分闲情逸致，和家人小酌，和哥们儿欢饮……然而，当你怀揣梦想雄心勃勃进入社会，加班、出差、应酬、喝酒、喝酒、喝酒……喝酒这件事儿一旦上升到生存技能层面，就变成了一件很让人蛋疼的事情。
+                        </p>
+                        <p class="mt-18">
+                            有多少人日复一日周旋在酒桌饭局之间？一组真实而触目惊心的数据：早在2009年，中国人每年喝掉的粮食就有300亿公斤，按2公斤粮食酿1公斤酒来算，13亿中国人平均每人每年负责消耗11.5公斤酒，即一斤装的酒23瓶。全国有2亿以上“饮酒成癖”的酒民，每年有11万人死于酒精中毒，相当于平均每5分钟，就有1个人因酒精中毒挂掉。
+                        </p>
+                        <p class="mt-18">
+                            酒场凶猛，人生苦短，现实越来越让人感到无力：工作到现在，我们到底喝了多少不想喝的酒？我们与真正的酒文化是不是越走越远了？酒，只能这样喝吗？
+                        </p>
+                        <p>
+                            2014年，一群怀抱梦想的人，正在用他们的行动给出答案。
+                        </p>
+                        <p class="mt-18">
+                            这群人里，有中国酿酒大师、国学大师、艺术家、酒业专家、心理学专家、设计牛人、互联网精英……这是一个横跨白酒与艺术、传统与互联网的团队。在白酒领域的长期浸淫中，我们感受到中华酒文化生生不息的魅力，也看到了传统白酒浮躁、扭曲的现实困境。我们致力于重新发现中国文化，颠覆传统白酒，让白酒成为文化最温暖的表达方式。
+                        </p>
+                        <p style="font-weight:bold;">
+                            我们做了一件事——国馆。
+                        </p>
+                    </div>
+                    <div class="story-four-img">
+                        <img src="zhongguodao/images/5_02.jpg" width="532" height="331">
+                        <img src="zhongguodao/images/5_03.jpg" width="357" height="331">
+                        <img src="zhongguodao/images/5_04.jpg" width="447" height="331">
+                        <img src="zhongguodao/images/5_05.jpg" width="442" height="331">
+                    </div>
+                    <div class="s-wenzhang">
+                        <p style="margin-top:50px;">
+                            为什么是“国馆”？市场上“国”字号的白酒比比皆是，国酒茅台、国窖1573、国藏汾酒……“国馆”凭什么跟这些老大哥较劲？答案是：国馆不是在跟酒业巨头较劲，国馆是在向传统文化致敬。过去十多年，白酒高歌猛进，前所未有的繁荣掩盖了行业许多本质性的问题，白酒和它本身所承载的文化，在过度消费、畸形消费中日益断裂，人们为面子而喝，为关系而喝，为目的而喝……而国馆希望的，是让白酒回归文化，让文化像美酒一样温暖人心。
+                        </p>
+                        <p class="mt-18">
+                            国馆酿造的，是流淌在中国人情感中的那杯酒。
+                        </p>
+                        <p>
+                            为了酿造心中的这杯酒，我们对几乎所有的环节，都做到了极致的追求。
+                        </p>
+                        <p class="mt-18">
+                           <b> 最重要的——酒体。</b>为了你能喝到最好的酒，我们的专业品酒师访遍天下名酒厂，最终把目光锁定在川酒六朵金花之一的——沱牌舍得，泰安作坊老窖池原址酿造的顶级窖龄酒。懂白酒的都知道，“千年老窖万年糟”，窖池越老，酿酒越好。泰安作坊老窖池从明清传承到现在，不间断持续酿造，窖池内微生物世代繁衍，酿造出来的酒绝非寻常可比。我们特别邀请首届中国酿酒大师李家顺调制酒体，幽雅馥郁，醇厚绵长，粮香、窖香交织，堪称浓香一绝。为了测试酒体口感，我们邀请多位业内专家把它和几款同档次名牌酒进行盲品比较，得出来的结论是：这款酒的品质，可以秒杀市面上绝大多数白酒。
+                        </p>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="zhongguodao/images/5_06.jpg" width="891" height="595" style="margin-top: 50px">
+                        <div class="text-detail">
+                            首批中国食品文化遗产“泰安作坊”酿造车间实景图
+                        </div>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="zhongguodao/images/5_07.jpg" width="891" height="595">
+                        <div class="text-detail">
+                            “会呼吸的宜兴陶坛”储酒库
+                        </div>
+                    </div>
+                    <div class="s-wenzhang">
+                        <p >
+                            <b> 更彻底的颠覆——文化。</b>尽管几乎所有的白酒都宣称自己是文化酒，但唯一彻底地将文化基因注入白酒之中的，只有国馆。仿效著名的木桐酒庄，国馆的每一款产品都会与艺术家跨界创作，这足以让国馆的产品气质完爆普通白酒十几条街。譬如，我们邀请国学大师饶宗颐为国馆题写“酒以载道”，邀请著名艺术家、书法家李正天先生为国馆首款产品“中国道”题写瓶身书法。有人说，白酒不过是附庸风雅，而我们从一开始就为国馆注入文化、艺术的生命基因。国馆酒，你可以喝，可以把玩，更可以收藏。
+                        </p>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="zhongguodao/images/5_08.jpg" width="891" height="595">
+                        <div class="text-detail">
+                            国学泰斗饶宗颐为国馆题写“酒以载道”
+                        </div>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="zhongguodao/images/5_09.jpg" width="891" height="595">
+                    </div>
+                    <div class="s-wenzhang">
+                        <p >
+                            <b>包装——我们同样追求极致。</b>国内顶尖的酒类包装设计团队，十余年产品设计经验，历时两年反复打磨一款包装，从几百款古代器型中汲取灵感，不计成本打样数十次（据说供应商都快哭了）。如此苛刻，试问国内有几个酒品牌能做到？这还不够，这帮吹毛求疵的设计师还找到了国内最专业的包装制作团队，为“中国道”定制了惊艳的景泰蓝卷外轴套……还不够！为了达到最佳陈设效果，他们又量身定制了高档陈列底座。喏，就是下面这样：
+                        </p>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="zhongguodao/images/5_10.jpg" width="891" height="583">
+                    </div>
+                    <div class="s-wenzhang">
+                        <p >
+                            <b>更极致的考验——物流。</b>首先，由于酒是液体和易碎品，只能发陆运，陆运意味着漫长的周转时间，为了让你不用等太久，我们果断选择了价格偏贵、但速度更有保障的XX物流。其次，如果你在网上买过酒，一定会被那些简陋、粗暴的包装震惊到，如果运气不好，漏酒破损什么的更令人揪心。为了彻底改变白酒物流低劣、粗暴的消费体验，我们再一次豁出去了！——定制！根据每一款酒的不同大小，量身定做高硬度重型纸箱（比苹果电脑用的那种外纸箱还要厚、还要硬）。不，这还不够，为了确保安全，我们将破坏性测试进行到底，让公司里身高一米八、重约0.2吨的西北大汉踩上去……结果：毫无压力，完好无损。
+                        </p>
+                        <p style="margin-top:50px;">
+                            如上所述这些，只是整个庞大系统里面的几个环节。一瓶酒，从原粮、取水、制曲、发酵、摊晾、蒸馏、储藏、勾调……到包装、发货、物流、配送……最终到达你的手中，前前后后要经过可能不少于100道工序，辗转上百人之手，从此处到彼处，从嘴里，到心里。
+                        </p>
+                        <p class="mt-18">
+                            这样极致而美好的酒，该怎样才能不辜负它？这样珍贵的礼物，只适合送给最尊敬的人——你的长辈，或是事业上的贵人。或者自私点儿，干脆自己收藏吧，摆在客厅彰显逼格。对了，别轻易喝了它！好酒是一定会升值的，更何况是限量版的“国馆•中国道”呢！
+                        </p>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="zhongguodao/images/5_11.jpg" width="891" height="583">
+                    </div>
+                    <div class="s-wenzhang">
+                        <p style="margin-top: 50px;">
+                            好了，回到文章最初的问题：酒，只能这样喝吗？
+                        </p>
+                        <p>
+                            答案已经显而易见：当我们摒弃浮躁、功利、走偏的白酒文化，回到酒本身，自然就能发现它的美妙，发现它所承载的文化与情感，发现与它有关的一切故事。在国馆，我们用文化浅斟慢饮，重新发现遗落的美好。
+                        </p>
+                        <p>
+                            因为我们相信：每个中国人心里，都有一杯温暖的酒。
+                        </p>
+                        <p>
+                            我们用这杯酒，向传统文化致敬，向生命中的美好致敬。
+                        </p>
+                        <p>
+                            我们相信，生命中的美好，一定会抵达。
+                        </p>
+                    </div>
+                    <div style="text-align: center; padding-bottom: 80px;">
+                        <img src="zhongguodao/images/5_12.jpg" width="975" height="804">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="tabs1-three">
@@ -324,23 +436,23 @@ margin-top: -3px;">
 
         <div id="tabs1-four">
             <div style="text-align: center">
-                <img src="zhongguodao/images/3_01.jpg" width="923" height="636" style="margin-top: 97px">
-                <img src="zhongguodao/images/3_02.jpg" width="893" height="583" style="margin-top: 30px">
-                <img src="zhongguodao/images/4_01.jpg" width="914" height="343" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_03.jpg" width="928" height="486" style="margin-top: 30px">
-                <img src="zhongguodao/images/4_02.jpg" width="904" height="203" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_04.jpg" width="920" height="650" style="margin-top: 30px">
-                <img src="zhongguodao/images/4_03.jpg" width="908" height="247" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_05.jpg" width="896" height="585" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_06.jpg" width="892" height="583" style="margin-top: 30px">
-                <img src="zhongguodao/images/4_04.jpg" width="907" height="266" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_07.jpg" width="894" height="582" style="margin-top: 30px">
-                <img src="zhongguodao/images/4_05.jpg" width="899" height="210" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_08.jpg" width="892" height="583" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_09.jpg" width="907" height="566" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_10.jpg" width="893" height="618" style="margin-top: 30px">
-                <img src="zhongguodao/images/4_06.jpg" width="905" height="352" style="margin-top: 30px">
-                <img src="zhongguodao/images/3_11.jpg" width="968" height="816" style="margin-top: 30px ;margin-bottom: 20px;">
+                <img src="zhongguodao/images/3_01.jpg" width="923" height="636" style="margin-top: 97px"><br>
+                <img src="zhongguodao/images/3_02.jpg" width="893" height="583" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/4_01.jpg" width="914" height="343" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_03.jpg" width="928" height="486" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/4_02.jpg" width="904" height="203" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_04.jpg" width="920" height="650" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/4_03.jpg" width="908" height="247" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_05.jpg" width="896" height="585" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_06.jpg" width="892" height="583" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/4_04.jpg" width="907" height="266" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_07.jpg" width="894" height="582" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/4_05.jpg" width="899" height="210" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_08.jpg" width="892" height="583" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_09.jpg" width="907" height="566" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_10.jpg" width="893" height="618" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/4_06.jpg" width="905" height="352" style="margin-top: 20px"><br>
+                <img src="zhongguodao/images/3_11.jpg" width="968" height="816" style="margin-top: 20px ;margin-bottom: 80px;">
                 <span style="display: none">
                     “最美的卷轴”是怎样诞生的
 ——一个设计团队和他们理解的“中国道”
