--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -32,7 +32,7 @@
     #tabs1-four{background-color: #eee;}
 </style>
 <!--head-->
-<div id="homenav" style="z-index: 9999">
+<div id="homenav" style="position:relative;z-index:9999;">
     <div class="banner">
         <a href="http://www.guoguan.com">
             <div class="logo"></div>
