--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -22,6 +22,7 @@
         left: 50%;
         text-align: right;
         margin-left: -350px;
+
     }
     .tab { float: left; zoom:1; padding-top:4px;  }
     .tab a { font-size: 14px; line-height: 2em; display: block; padding: 0 10px; outline: none; }
@@ -75,17 +76,16 @@
             <!-- <div id="nav_animate_block"></div>-->
         </div>
     </div>
-    <div class="second-banner">
-        <div class="purchase-content " style="margin-top: 5px;">
-            <a href="http://www.guoguan.com/index/qore/" class="qore-code">
-                <div class="small-button" style="float: right">
-                    <div class="small-button-content">立即购买</div>
-                </div>
-            </a>
-        </div>
+</div>
+<div class="second-banner">
+    <div class="purchase-content " style="margin-top: 5px;">
+        <a href="http://box.guoguan.com/cart/gotocart">
+            <div class="small-button" style="float: right">
+                <div class="small-button-content">立即购买</div>
+            </div>
+        </a>
     </div>
 </div>
-
 
 
 
