--- a/newIndex/zhongguodao.html
+++ b/newIndex/zhongguodao.html
@@ -18,10 +18,10 @@
     .etabs {
         position: absolute;
         z-index: 4;
-        width: 700px;
+        width: 692px;
         left: 50%;
         text-align: right;
-        margin-left: -350px;
+        margin-left: -400px;
 
     }
     .tab { float: left; zoom:1; padding-top:4px;  }
@@ -77,7 +77,7 @@
         </div>
     </div>
 </div>
-<div class="second-banner">
+<div class="second-banner" style="">
     <div class="purchase-content " style="margin-top: 5px;">
         <a href="http://box.guoguan.com/cart/gotocart">
             <div class="small-button" style="float: right">
