--- a/newIndex/youku.html
+++ b/newIndex/youku.html
@@ -22,7 +22,7 @@ transform: translate(-50%, -50%);">
     player = new YKU.Player('youkuplayer',{
         styleid: '0',
         client_id: 'ff3f6964beb06f04',
-        vid: 'XNzExNDM5NTU2',
+        vid: 'XNzEyNDUwNDY4',
         autoplay: true
     });
 </script>
