--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -103,7 +103,7 @@
 
 <div class="m-check-pay-area">
     <div class="m-check-total-money">
-        合计<span>￥2466(-200)</span>
+        合计<span>￥2466<b style="font-size: 1.2rem; margin-left: 0.4rem;">(已优惠200)</b></b></span>
     </div>
     <a href="m-online-pay.html">
         <div class="m-button m-button-check">
