--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -63,136 +63,96 @@
                             <i class="icon-caret-down" style="color: #9c9c9c"></i>
                         </a>
                         <ul>
-                            <li><a href="#" ><span>每日一文</span></a></li>
-                            <li><a href="#" ><span>国馆电台</span></a></li>
-                            <li><a href="#" ><span>国馆说文化</span></a>
+                            <li><a href="#" ><img src="images/5_01.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>每日一文</span></a></li>
+                            <li><a href="#" ><img src="images/5_02.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆电台</span></a></li>
+                            <li><a href="#" ><img src="images/5_03.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆说文化</span></a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="nav-main-item" style="float: right">
-                        <a href="#">
-                            媒体新闻
-                        </a>
                     </li>
                 </ul>
             </div>
             <div class="right">
                 <div class="cart-section">
                     <a href="#" class="mini-cart" style="color: #333;">
-                        购物车
+                        <i class="icon-shopping-cart" style="margin-right: 3px; margin-top: -2px;"></i>购物车
                     </a>
+
+                    <!--加载显示内容-->
+                    <!--<p class="loading">数据加载中，请稍后...(没有商品时显示：还没有商品哦)</p>-->
+
                     <div class="mini-cart-list">
-                        <p class="loading">数据加载中，请稍后...</p>
+                        <ul style="padding: 0;margin:0">
+                            <li class="clearfix">
+                                <a href="#" class="pic">
+                                    <img src="images/5_01.jpg" >
+                                </a>
+                                <a class="name">国馆·中国道</a>
+                                <span class="price">2399元x1</span>
+                                <a class="delItem">
+                                    <i class="icon-remove"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="count">
+                            <span class="total">
+                                共
+                                <em>1</em>
+                                件商品
+                                <br>
+                                <strong>
+                                    合计：
+                                    <em>2399元</em>
+                                </strong>
+                            </span>
+                            <a href="#" class="btn btn-red" style="float: right">去购物车结算</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <!--head end-->
 
     <!--content-->
     <div id="billboard" data-hires="true">
         <div class="swipe">
-            <ul id="slide">
+            <ul id="slide" style="">
                 <li style='display:block'>
                     <div class="index-banner-1">
-                        <div class="purchase">
-                            <div class="detail">
-                                <div class="detail-img-1"></div>
-                                <a href="qore.html" class="qore-code" >
-                                    <div class="button purchase-button">
-                                        <div class="button-content">点击购买</div>
-                                    </div>
-                                </a>
-                                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
-                                    <div class="get-more">
-                                        了解更多 >
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+
                     </div>
                 </li>
                 <li style='display:none;'>
                     <div class="index-banner-2">
-                        <div class="purchase">
-                            <div class="detail">
-                                <div class="detail-img-2"></div>
-                                <a href="qore.html" class="qore-code" >
-                                    <div class="button purchase-button">
-                                        <div class="button-content">点击购买</div>
-                                    </div>
-                                </a>
-                                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
-                                    <div class="get-more">
-                                        了解更多 >
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+
                     </div>
                 </li>
                 <li style='display:none;'>
                     <div class="index-banner-3">
-                        <div class="purchase">
-                            <div class="detail">
-                                <div class="detail-img-3"></div>
-                                <a href="qore.html" class="qore-code" >
-                                    <div class="button purchase-button">
-                                        <div class="button-content">点击购买</div>
-                                    </div>
-                                </a>
-                                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
-                                    <div class="get-more">
-                                        了解更多 >
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+
                     </div>
                 </li>
                 <li style='display:block'>
                     <div class="index-banner-4">
-                        <div class="purchase">
-                            <div class="detail">
-                                <div class="detail-img-4"></div>
-                                <a href="qore.html" class="qore-code" >
-                                    <div class="button purchase-button">
-                                        <div class="button-content">点击购买</div>
-                                    </div>
-                                </a>
-                                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
-                                    <div class="get-more">
-                                        了解更多 >
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+
                     </div>
                 </li>
                 <li style='display:none;'>
                     <div class="index-banner-5">
-                        <div class="purchase">
-                            <div class="detail">
-                                <div class="detail-img-5"></div>
-                                <a href="qore.html" class="qore-code" >
-                                    <div class="button purchase-button">
-                                        <div class="button-content">点击购买</div>
-                                    </div>
-                                </a>
-                                <a href="http://www.guoguan.com/zhongguodao" target="_blank">
-                                    <div class="get-more">
-                                        了解更多 >
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+
                     </div>
                 </li>
             </ul>
         </div>
 
-        <div id="pagenavi">
+        <div class="left-angle">
+            <i class="icon-angle-left"></i>
+        </div>
+        <div class="right-angle">
+            <i class="icon-angle-right"></i>
+        </div>
+
+        <div id="pagenavi" class="nav-dot-display">
             <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
             background-size: 10px 10px;
             display: inline-block;
@@ -226,8 +186,184 @@
         </div>
     </div>
     <div class="container">
+        <ul class="model-nav">
+            <li>国馆中国道</li>
+        </ul>
+        <div class="clear"></div>
+        <div class="model-one">
+            <div class="model-one-left">
+                <div class="detail">
+                    <div class="title">国馆中国道</div>
+                    <div class="text">这一次,人们重新定义白酒</div>
+                    <div class="link">
+                        <a href="#" style="color: #fff;">
+                            详细了解<i class="icon-angle-right"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="model-one-right">
+                <div class="model-little-one model-little">
+                    <div class="model-bottom">
+                        <div class="left">
+                            <div class="title"><span>宣传视频</span></div>
+                            <div class="detail"><span>国馆中国道，史上最惊艳的中国风</span></div>
+                        </div>
+                        <div class="right">
+                            <img src="images/play_icon.png" style="width:20px;height: 20px;">
+                        </div>
+                    </div>
+                </div>
+                <div class="model-little-two model-little">
+                    <div class="model-bottom">
+                        <div class="left">
+                            <div class="title"><span>跨界之作</span></div>
+                            <div class="detail"><span>艺术大师李正天与国内顶尖设计团队的跨界合作</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="model-little-three model-little">
+                    <div class="model-bottom">
+                        <div class="left">
+                            <div class="title"><span>顶级酒品</span></div>
+                            <div class="detail"><span>酿酒大师李家顺亲自调酒，明清老窖池酿造</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="model-little-four model-little">
+                    <div class="model-bottom">
+                        <div class="left">
+                            <div class="title"><span>规格参数</span></div>
+                            <div class="detail"><span>国馆中国道一套两支卷轴，四瓶酒，每瓶500ml</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
 
+        <ul class="model-nav">
+            <li>
+                文化应用
+            </li>
+            <li>
+                <a href="#">
+                    每日一文
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    国馆说文化
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    国馆电台
+                </a>
+            </li>
+        </ul>
+        <div class="model-two">
+            <div class="model-two-little">
+                <div>
+                    <a href="#">
+                        <img src="images/5_01.jpg" class="app-image">
+                    </a>
+                </div>
+
+                <div class="app-column">
+                    <a href="#">
+                        每日一文
+                    </a>
+                </div>
+                <div class="app-title">
+                    <a href="#">
+                        孤独的人都要吃饱
+                    </a>
+                </div>
+                <div class="app-detail">14:00</div>
+                <div class="app-author">
+                    <span style="float: left">国馆团队</span>
+                    <span style="float: right">收看3456</span>
+                </div>
+            </div>
+            <div class="model-two-little">
+                <div>
+                    <a href="#">
+                        <img src="images/5_02.jpg" class="app-image">
+                    </a>
+                </div>
+
+                <div class="app-column">
+                    <a href="#">
+                        每日一文
+                    </a>
+                </div>
+                <div class="app-title">
+                    <a href="#">
+                        悦人者众，悦已者王
+                    </a>
+                </div>
+                <div class="app-detail">13:00</div>
+                <div class="app-author">
+                    <span style="float: left">国馆团队</span>
+                    <span style="float: right">收看3456</span>
+                </div>
+            </div>
+            <div class="model-two-little">
+                <div class="avi-play">
+                    <a href="#">
+                        <img src="images/5_03.jpg" class="app-image">
+                        <img src="images/play_icon.png" class="icon-play-app">
+                    </a>
+                </div>
+
+                <div class="app-column">
+                    <a href="#">
+                        国馆说
+                    </a>
+                </div>
+                <div class="app-title">
+                    <a href="#">
+                        3分钟了解中国人到底喝了多少
+                    </a>
+                </div>
+                <div class="app-detail">
+                    世上有许多东西，中吃不中看，要用巧词修饰避讳。比如，前清、民国时，老北京街坊
+                </div>
+                <div class="app-author">
+                    <span style="float: left">国馆团队</span>
+                    <span style="float: right">收看3456</span>
+                </div>
+            </div >
+            <div class="last-app model-two-little">
+                <div class="avi-play">
+                    <a href="#">
+                        <img src="images/5_04.jpg" class="app-image">
+                        <img src="images/play_icon.png" class="icon-play-app">
+                    </a>
+                </div>
+
+                <div class="app-column">
+                    <a href="#">
+                        国馆电台
+                    </a>
+                </div>
+                <div class="app-title">
+                    <a href="#">
+                        迷糊小姐与脑残先生的故事
+                    </a>
+                </div>
+                <div class="app-detail">
+                    世上有许多东西，中吃不中看，要用巧词修饰避讳。比如，前清、民国时，老北京街坊
+                </div>
+                <div class="app-author">
+                    <span style="float: left">主播：天意  &nbsp; 作者：居经纬</span>
+                    <span style="float: right">收看3456</span>
+                </div>
+            </div>
+        </div>
     </div>
+    <!--content end-->
 
 
     <!--footer-->
@@ -237,35 +373,35 @@
                 <ul class="list-service clearfix">
                     <li>
                         <a rel="nofollow" href="#" target="_blank">
-                            <i class="iconfont"></i>
+                            <i class="icon-tint icon-style"></i>
                             <strong>100% 酒品保证</strong>
                             <span>中国道白酒可以秒杀同价位一切白酒</span>
                         </a>
                     </li>
                     <li>
-                        <a rel="nofollow" href="#" target="_blank">
-                            <i class="iconfont"></i>
+                        <a href="#" target="_blank">
+                            <i class="icon-paste icon-style"></i>
                             <strong>独家专利</strong>
                             <span>国馆已申请多项专利，彻底杜绝山寨</span>
                         </a>
                     </li>
                     <li>
-                        <a rel="nofollow" href="#" target="_blank">
-                            <i class="iconfont"></i>
+                        <a href="#" target="_blank">
+                            <i class="icon-credit-card icon-style"></i>
                             <strong>VIP专享特权</strong>
                             <span>VIP客户均享受馆友会诸多特权</span>
                         </a>
                     </li>
                     <li>
-                        <a rel="nofollow" href="#" target="_blank">
-                            <i class="iconfont"></i>
+                        <a href="#" target="_blank">
+                            <i class="icon-plane icon-style"></i>
                             <strong>满100元包邮</strong>
                             <span>在线支付满百元免邮费</span>
                         </a>
                     </li>
                     <li>
-                        <a rel="nofollow" href="#" target="_blank">
-                            <i class="iconfont"></i>
+                        <a href="#" target="_blank">
+                            <i class="icon-umbrella icon-style"></i>
                             <strong>破损必赔</strong>
                             <span>拆箱验货发现破损无条件退货</span>
                         </a>
@@ -304,7 +440,8 @@
                 <div class="col-contact">
                     <p class="phone">400-900-5000</p>
                     <p>周一至周五 9:00-18:00<br>（仅收市话费）</p>
-                    <a rel="nofollow" class="btn btn-primary btn-small" href="http://www.mi.com/service/contact" target="_blank">微信咨询：国馆酒</a>
+                    <a rel="nofollow" class="btn btn-primary btn-small" href="#" target="_blank">微信咨询：国馆酒</a>
+                    <a rel="nofollow" class="btn btn-primary btn-small" href="#" target="_blank" style="width: 50px;">QQ</a>
                 </div>
             </div>
             <div class="footer-info clearfix">
@@ -315,6 +452,7 @@
             </div>
         </div>
     </div>
+    <!--footer end-->
 </div>
 </body>
 <script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
@@ -323,13 +461,26 @@
 <script>
     $(document).ready(function() {
         $('#idmenu').mnmenu();
+
         $(".cart-section").hover(function(){
-            $(".cart-section a").addClass("mini-cart-on");
+            $(".cart-section>a").addClass("mini-cart-on");
             $(".mini-cart-list").css("display","block");
         },function(){
-            $(".cart-section a").removeClass("mini-cart-on");
+            $(".cart-section>a").removeClass("mini-cart-on");
             $(".mini-cart-list").css("display","none");
-        })
+        });
+
+        $(".model-little").hover(function(){
+            $(this).find(".model-bottom").css("background-color","rgba(195,56,41,1)");
+        },function(){
+            $(this).find(".model-bottom").css("background-color","rgba(0,0,0,0.3)");
+        });
+
+        $(".model-two-little").hover(function(){
+            $(this).find("img").css("opacity","1");
+        },function(){
+            $(this).find("img").css("opacity","0.7");
+        });
     })
 </script>
 <script type="text/javascript">
@@ -345,6 +496,14 @@
             }
         })();
     }
+
+    $(".left-angle").on("click",function(){
+        t4.prev();
+    })
+
+    $(".right-angle").on("click",function(){
+        t4.next();
+    })
 
     var t4 = new TouchSlider({id:'slide', speed:600, timeout:6000, before:function(index){
         as[active].className='';
