--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -10,6 +10,7 @@
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="global/styles/font-awesome.min.css">
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
+    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div>
@@ -203,14 +204,24 @@
                 </div>
             </div>
             <div class="model-one-right">
-                <div class="model-little-one model-little">
-                    <div class="model-bottom">
-                        <div class="left">
-                            <div class="title"><span>宣传视频</span></div>
-                            <div class="detail"><span>国馆中国道，史上最惊艳的中国风</span></div>
-                        </div>
+                <div class="model-little-one model-little" onclick="window.open('youku.html','_self')">
+                    <div class="model-bottom" >
+                            <div class="left" >
+                                <div class="title">
+                                    <span>
+                                        宣传视频
+                                    </span>
+                                </div>
+                                <div class="detail">
+                                    <span>
+                                        国馆中国道，史上最惊艳的中国风
+                                    </span>
+                                </div>
+                            </div>
                         <div class="right">
-                            <img src="images/play_icon.png" style="width:20px;height: 20px;">
+                            <a href="youku.html" style="color: #fff">
+                                <img src="images/play_icon.png" style="width:20px;height: 20px;">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -440,7 +451,7 @@
                 <div class="col-contact">
                     <p class="phone">400-900-5000</p>
                     <p>周一至周五 9:00-18:00<br>（仅收市话费）</p>
-                    <a rel="nofollow" class="btn btn-primary btn-small" href="#" target="_blank">微信咨询：国馆酒</a>
+                    <a rel="nofollow" class="btn btn-primary btn-small qore-code" href="qore.html" target="_blank">微信咨询：国馆酒</a>
                     <a rel="nofollow" class="btn btn-primary btn-small" href="#" target="_blank" style="width: 50px;">QQ</a>
                 </div>
             </div>
@@ -458,6 +469,8 @@
 <script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
 <script src="global/scripts/lib/jquery.mnmenu.js" type="text/javascript"></script>
 <script src="global/scripts/lib/touchslider.js" type="text/javascript"></script>
+<script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
+<script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.js" type="text/javascript"></script>
 <script>
     $(document).ready(function() {
         $('#idmenu').mnmenu();
@@ -516,6 +529,20 @@
     },function(){
         t4.play();
     })
-
+</script>
+<script>
+    $(document).ready(function() {
+        $(".qore-code").fancybox({
+            'width'				: 200,
+            'height'			: 260,
+            'autoScale'			: false,
+            'transitionIn'		: 'fade',
+            'transitionOut'		: 'fade',
+            'overlayOpacity'	: '0.7',
+            'overlayColor'		: '#fff',
+            'scrolling'		    : 'no',
+            'type'				: 'iframe'
+        });
+    });
 </script>
 </html>
