--- a/newGuo/register.html
+++ b/newGuo/register.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
-    <title>国馆——让文化温暖人心 | 国馆酒官方商城</title>
+    <title>国馆账号注册</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="国馆中国道,国馆,国馆酒">
-    <meta name="description" content="国馆是中国收藏级文化白酒品牌，同时也是一个融国学、文化、艺术为一体的传播平台。
-">
+    <meta name="keywords" content="国馆账号注册">
+    <meta name="description" content="国馆账号注册">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="global/styles/font-awesome.min.css">
@@ -115,262 +114,60 @@
     <!--head end-->
 
     <!--content-->
-    <div id="billboard" data-hires="true">
-        <div class="swipe">
-            <ul id="slide" style="">
-                <li style='display:block'>
-                    <div class="index-banner-1">
-
-                    </div>
-                </li>
-                <li style='display:none;'>
-                    <div class="index-banner-2">
-
-                    </div>
-                </li>
-                <li style='display:none;'>
-                    <div class="index-banner-3">
-
-                    </div>
-                </li>
-                <li style='display:block'>
-                    <div class="index-banner-4">
-
-                    </div>
-                </li>
-                <li style='display:none;'>
-                    <div class="index-banner-5">
-
-                    </div>
-                </li>
-            </ul>
-
-            <div class="left-angle">
-                <i class="icon-angle-left"></i>
-            </div>
-            <div class="right-angle">
-                <i class="icon-angle-right"></i>
-            </div>
-
-        </div>
-
-        <div id="pagenavi" class="nav-dot-display">
-            <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
-            background-size: 10px 10px;
-            display: inline-block;
-            height: 10px;
-            margin-right: 10px;
-            width: 10px;"></a>
-            <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-            background-size: 10px 10px;
-            display: inline-block;
-            height: 10px;
-            margin-right: 10px;
-            width: 10px;"></a>
-            <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-            background-size: 10px 10px;
-            display: inline-block;
-            height: 10px;
-            margin-right: 10px;
-            width: 10px;"></a>
-            <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-            background-size: 10px 10px;
-            display: inline-block;
-            height: 10px;
-            margin-right: 10px;
-            width: 10px;"></a>
-            <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
-            background-size: 10px 10px;
-            display: inline-block;
-            height: 10px;
-            margin-right: 10px;
-            width: 10px;"></a>
-        </div>
-    </div>
     <div class="container">
-        <ul class="model-nav">
-            <li>国馆中国道</li>
-        </ul>
-        <div class="clear"></div>
-        <div class="model-one">
-            <div class="model-one-left">
-                <div class="detail">
-                    <div class="title">国馆中国道</div>
-                    <div class="text">这一次,人们重新定义白酒</div>
-                    <div class="link">
-                        <a href="#" style="color: #fff;">
-                            详细了解<i class="icon-angle-right"></i>
-                        </a>
+        <div class="login-background">
+            <div class="login-form">
+                <div class="login-title">
+                    注册国馆账户
+                </div>
+                <div class="login-input-area">
+                    <input type="text" placeholder="&nbsp;手机号码" class="input-style width100">
+                    <div class="error-tip-bg">
+                        <span>
+                        手机号码错误
+                        </span>
                     </div>
                 </div>
-            </div>
-            <div class="model-one-right">
-                <div class="model-little-one model-little" onclick="window.open('youku.html','_self')">
-                    <div class="model-bottom" >
-                            <div class="left" >
-                                <div class="title">
-                                    <span>
-                                        宣传视频
-                                    </span>
-                                </div>
-                                <div class="detail">
-                                    <span>
-                                        国馆中国道，史上最惊艳的中国风
-                                    </span>
-                                </div>
-                            </div>
-                        <div class="right">
-                            <a href="youku.html" style="color: #fff">
-                                <img src="images/play_icon.png" style="width:20px;height: 20px;">
-                            </a>
-                        </div>
+                <div class="login-input-area">
+                    <input type="text" placeholder="&nbsp;验证码" class="input-style valite-code">
+                    <a href="#" class="btn btn-valite">获取手机验证码</a>
+                    <div class="error-tip-bg">
+                        <span>
+                        手机号码错误
+                        </span>
                     </div>
                 </div>
-                <div class="model-little-two model-little">
-                    <div class="model-bottom">
-                        <div class="left">
-                            <div class="title"><span>跨界之作</span></div>
-                            <div class="detail"><span>艺术大师李正天与国内顶尖设计团队的跨界合作</span></div>
-                        </div>
+                <div class="login-input-area">
+                    <input type="text" placeholder="&nbsp;常用邮箱" class="input-style width100">
+                    <div class="error-tip-bg">
+                        <span>
+                        手机号码错误
+                        </span>
                     </div>
                 </div>
-                <div class="model-little-three model-little">
-                    <div class="model-bottom">
-                        <div class="left">
-                            <div class="title"><span>顶级酒品</span></div>
-                            <div class="detail"><span>酿酒大师李家顺亲自调酒，明清老窖池酿造</span></div>
-                        </div>
+                <div class="login-input-area">
+                    <input type="text" placeholder="&nbsp;新的登录密码" class="input-style width100">
+                    <div class="error-tip-bg">
+                        <span>
+                        手机号码错误
+                        </span>
                     </div>
                 </div>
-                <div class="model-little-four model-little">
-                    <div class="model-bottom">
-                        <div class="left">
-                            <div class="title"><span>规格参数</span></div>
-                            <div class="detail"><span>国馆中国道一套两支卷轴，四瓶酒，每瓶500ml</span></div>
-                        </div>
-                    </div>
+                <div class="login-input-area">
+                    <a href="#" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">立即注册</a>
                 </div>
-            </div>
-        </div>
-        <div class="clear"></div>
-
-        <ul class="model-nav">
-            <li>
-                文化应用
-            </li>
-            <li>
-                <a href="#">
-                    每日一文
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    国馆说文化
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    国馆电台
-                </a>
-            </li>
-        </ul>
-        <div class="model-two">
-            <div class="model-two-little">
-                <div>
-                    <a href="#">
-                        <img src="images/5_01.jpg" class="app-image">
+                <div class="login-input-area" style="color: #fff; font-size: 12px">
+                    点击“立即注册”，即表示您同意并愿意遵守
+                    <a href="#" style="color: #fff; text-decoration: underline">
+                    用户协议
+                    </a>
+                    和
+                    <a href="#" style="color: #fff; text-decoration: underline">
+                    隐私政策
                     </a>
                 </div>
-
-                <div class="app-column">
-                    <a href="#">
-                        每日一文
-                    </a>
-                </div>
-                <div class="app-title">
-                    <a href="#">
-                        孤独的人都要吃饱
-                    </a>
-                </div>
-                <div class="app-detail">14:00</div>
-                <div class="app-author">
-                    <span style="float: left">国馆团队</span>
-                    <span style="float: right">收看3456</span>
-                </div>
-            </div>
-            <div class="model-two-little">
-                <div>
-                    <a href="#">
-                        <img src="images/5_02.jpg" class="app-image">
-                    </a>
-                </div>
-
-                <div class="app-column">
-                    <a href="#">
-                        每日一文
-                    </a>
-                </div>
-                <div class="app-title">
-                    <a href="#">
-                        悦人者众，悦已者王
-                    </a>
-                </div>
-                <div class="app-detail">13:00</div>
-                <div class="app-author">
-                    <span style="float: left">国馆团队</span>
-                    <span style="float: right">收看3456</span>
-                </div>
-            </div>
-            <div class="model-two-little">
-                <div class="avi-play">
-                    <a href="#">
-                        <img src="images/5_03.jpg" class="app-image">
-                        <img src="images/play_icon.png" class="icon-play-app">
-                    </a>
-                </div>
-
-                <div class="app-column">
-                    <a href="#">
-                        国馆说
-                    </a>
-                </div>
-                <div class="app-title">
-                    <a href="#">
-                        3分钟了解中国人到底喝了多少
-                    </a>
-                </div>
-                <div class="app-detail">
-                    世上有许多东西，中吃不中看，要用巧词修饰避讳。比如，前清、民国时，老北京街坊
-                </div>
-                <div class="app-author">
-                    <span style="float: left">国馆团队</span>
-                    <span style="float: right">收看3456</span>
-                </div>
-            </div >
-            <div class="last-app model-two-little">
-                <div class="avi-play">
-                    <a href="#">
-                        <img src="images/5_04.jpg" class="app-image">
-                        <img src="images/play_icon.png" class="icon-play-app">
-                    </a>
-                </div>
-
-                <div class="app-column">
-                    <a href="#">
-                        国馆电台
-                    </a>
-                </div>
-                <div class="app-title">
-                    <a href="#">
-                        迷糊小姐与脑残先生的故事
-                    </a>
-                </div>
-                <div class="app-detail">
-                    世上有许多东西，中吃不中看，要用巧词修饰避讳。比如，前清、民国时，老北京街坊
-                </div>
-                <div class="app-author">
-                    <span style="float: left">主播：天意  &nbsp; 作者：居经纬</span>
-                    <span style="float: right">收看3456</span>
+                <div class="login-input-area">
+                    <a href="#" class="btn btn-valite" style="width: 100%; margin-top:30px;">已有账户，点此登录</a>
                 </div>
             </div>
         </div>
@@ -379,7 +176,7 @@
 
 
     <!--footer-->
-    <div class="site-footer">
+    <div class="site-footer mt0">
         <div class="container">
             <div class="footer-service">
                 <ul class="list-service clearfix">
@@ -469,7 +266,6 @@
 </body>
 <script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
 <script src="global/scripts/lib/jquery.mnmenu.js" type="text/javascript"></script>
-<script src="global/scripts/lib/touchslider.js" type="text/javascript"></script>
 <script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
 <script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.js" type="text/javascript"></script>
 <script>
@@ -512,39 +308,24 @@
         });
     })
 </script>
-<script type="text/javascript">
-    var active=0,
-        as=document.getElementById('pagenavi').getElementsByTagName('a');
+<script>
+    //Assign to those input elements that have 'placeholder' attribute
+    $('input[placeholder]').each(function(){
+        var input = $(this);
+        $(input).val(input.attr('placeholder'));
 
-    for(var i=0;i<as.length;i++){
-        (function(){
-            var j=i;
-            as[i].onclick=function(){
-                t4.slide(j);
-                return false;
+        $(input).focus(function(){
+            if (input.val() == input.attr('placeholder')) {
+                input.val('');
             }
-        })();
-    }
+        });
 
-    $(".left-angle").on("click",function(){
-        t4.prev();
-    })
-
-    $(".right-angle").on("click",function(){
-        t4.next();
-    })
-
-    var t4 = new TouchSlider({id:'slide', speed:600, timeout:6000, before:function(index){
-        as[active].className='';
-        active=index;
-        as[active].className='active';
-    }});
-
-    $("#slide li").hover(function(){
-        t4.pause();
-    },function(){
-        t4.play();
-    })
+        $(input).blur(function(){
+            if (input.val() == '' || input.val() == input.attr('placeholder')) {
+                input.val(input.attr('placeholder'));
+            }
+        });
+    });
 </script>
 <script>
     $(document).ready(function() {
