这又是一堆页面

--- a/newGuo/forget-password-1.html
+++ b/newGuo/forget-password-1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>下单付款</title>
+    <title>忘记密码</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="下单付款">
-    <meta name="description" content="下单付款">
+    <meta name="keywords" content="忘记密码">
+    <meta name="description" content="忘记密码">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -115,60 +115,26 @@
 
 <!--content-->
 <div class="container">
-    <div class="my-cart">
-        <h1>您的订单已生成，最后一步，付款</h1>
-        <div style="border-bottom: 1px solid #ccc;"></div>
-        <div class="pay-detail">
-            <div class="order-number">
-                订单：2014978239479
-            </div>
-            <div class="order-money">
-                <p>
-                    金额：234234元
-                </p>
-                <p>
-                    货品：国馆中国道 *1
-                </p>
-            </div>
-            <div class="order-money">
-                <p>
-                    配送：毛义明  /  18668199311  /  广东省，广州市，天河区，华明路 13号，华普广场东塔702 （510000）
-                </p>
-            </div>
-        </div>
-
-        <!--支付方式选择-->
-        <h1 style="margin-top: 50px;">选择支付方式</h1>
-        <div style="border-bottom: 1px solid #f8f8f8;"></div>
-        <div class="pay-method">
-            <div class="pay-method-detail">
-                <p>
-                    <span>支付平台</span><br>
-                    如遇支付限额限制，请提高相关支付额度。
-                </p>
-            </div>
-            <div class="pay-methos-aliy">
-                <input type="radio" checked style="vertical-align: middle">
-                <img src="global/images/zhifubao.jpg">
-            </div>
-        </div>
-
-        <!--配送方式-->
-        <h1 style="margin-top: 50px;">配送方式</h1>
-        <div style="border-bottom: 1px solid #f8f8f8;"></div>
-            <p style="margin-left: 15px;">
-                国馆酒类产品采用顺丰物流（部分偏远地区采用EMS），包邮。
-            </p>
-
-        <!--支付页面底部-->
-        <ul class="table-content" style="margin-bottom: 30px; height: 135px;">
-            <li class="clear" style="width: 255px; text-align: right;float: right">
-                <a href="pay-success.html" class="btn btn-red" style="float: right; width: 100px; margin-top:50px;">下一步</a>
-                <a href="#" class="btn btn-valite" style=" margin-top:50px; float: right;height: 40px;line-height: 40px;margin-right: 10px;">修改订单</a>
-            </li>
-
+    <div class="find-process">
+        <ul class="shopcartstep clearfix">
+            <li class="complete"><span>1</span>填写账户</li>
+            <li><span>2</span>身份验证</li>
+            <li><span>3</span>设置新密码</li>
+            <li><span>4</span>完成</li>
         </ul>
-        <!--支付页面底部-->
+    </div>
+    <div class="login-form-find" style="margin-bottom: 100px;">
+        <div class="login-input-area">
+            <input type="text" placeholder="&nbsp;手机号码" class="input-style-border width100">
+            <!--<div class="error-tip-bg">
+                        <span>
+                        手机号码错误
+                        </span>
+            </div>-->
+        </div>
+        <div class="login-input-area">
+            <a href="#" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">下一步</a>
+        </div>
     </div>
 </div>
 <!--content end-->
