--- a/newGuo/forget-password-1.html
+++ b/newGuo/forget-password-1.html
@@ -133,7 +133,7 @@
             </div>-->
         </div>
         <div class="login-input-area">
-            <a href="#" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">下一步</a>
+            <a href="forget-password-2.html" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">下一步</a>
         </div>
     </div>
 </div>
