--- a/newGuo/forget-password-2.html
+++ b/newGuo/forget-password-2.html
@@ -136,7 +136,7 @@
             </div>-->
         </div>
         <div class="login-input-area">
-            <a href="#" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">下一步</a>
+            <a href="forget-password-3.html" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">下一步</a>
         </div>
         <div class="login-input-area">
             <a href="#" class="btn btn-valite" style="width: 100%;">重新获取</a>
